--- a/src/main/resources/templates/change_password.html
+++ b/src/main/resources/templates/change_password.html
@@ -5,7 +5,7 @@
   <title>Change</title>
       <link rel="stylesheet" type="text/css" href="./css/change_password.css">
       <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,700' rel='stylesheet' type='text/css'>
-        <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+        <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 
 
         <script type="text/javascript" src="./js/change_password.js"></script>
