added function which send details about orders to email

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -88,6 +88,7 @@
                 <li sec:authorize="hasRole('ROLE_ADMIN')">
                     <ul class="push">
                         <li  > <a href="/add_goods">ADD GOODS </a></li>
+                        <li class="allOrders"><a href="https://mail.google.com/mail/u/1/#inbox">Get all orders</a></li>
                     </ul>
                 </li>
 
